--- a/homework-6/decisionTreeRegression.ipynb
+++ b/homework-6/decisionTreeRegression.ipynb
@@ -2454,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 135,
    "id": "992de683-3aaa-457e-a942-7bd91f1b1f16",
    "metadata": {},
    "outputs": [
@@ -2463,7 +2463,7 @@
      "output_type": "stream",
      "text": [
       "Mean Squared Error (MSE): 0.2089\n",
-      "R-squared (R²): 0.9689\n"
+      "RMSE: 0.4571\n"
      ]
     }
    ],
@@ -2475,13 +2475,104 @@
     "rmse = np.sqrt(mse)\n",
     "\n",
     "print(f\"Mean Squared Error (MSE): {mse:.4f}\")\n",
-    "print(f\"RMSE: {r2:.4f}\")"
+    "print(f\"RMSE: {rmse:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16785be7-68bf-4418-9db0-6f9283dae9a7",
+   "metadata": {},
+   "source": [
+    "Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "c3c1fbec-1330-4291-bfe9-8905ff78a705",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 -> 0.457\n",
+      "20 -> 0.452\n",
+      "30 -> 0.450\n",
+      "40 -> 0.448\n",
+      "50 -> 0.446\n",
+      "60 -> 0.445\n",
+      "70 -> 0.445\n",
+      "80 -> 0.445\n",
+      "90 -> 0.444\n",
+      "100 -> 0.444\n",
+      "110 -> 0.443\n",
+      "120 -> 0.443\n",
+      "130 -> 0.443\n",
+      "140 -> 0.443\n",
+      "150 -> 0.442\n",
+      "160 -> 0.442\n",
+      "170 -> 0.442\n",
+      "180 -> 0.442\n",
+      "190 -> 0.442\n",
+      "200 -> 0.442\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmses = []\n",
+    "\n",
+    "for i in range(10, 201, 10):\n",
+    "    rf = RandomForestRegressor(n_estimators=i, random_state=1, n_jobs=-1)\n",
+    "    rf.fit(X_train, y_train)\n",
+    "    y_pred = rf.predict(X_val)\n",
+    "    mse = mean_squared_error(y_val, y_pred)\n",
+    "    rmse = np.sqrt(mse)\n",
+    "    print('%s -> %.3f' % (i, rmse))\n",
+    "    rmses.append(rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16e5af7b-6af8-4c04-a0e1-c7560f16c46e",
+   "metadata": {},
+   "source": [
+    "Q4"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81fe3ba6-8fee-4903-bf5e-9149d35b943c",
+   "id": "ff003756-0a7f-4ec6-b83f-f3a6179cbcc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_rmses = {}\n",
+    "\n",
+    "for depth in [10, 15, 20, 25]:\n",
+    "    print('depth: %s' % depth)\n",
+    "    rmses = []\n",
+    "\n",
+    "    for i in range(10, 201, 10):\n",
+    "        rf = RandomForestRegressor(n_estimators=i, max_depth=depth, random_state=1, n_jobs=-1)\n",
+    "        rf.fit(X_train, y_train)\n",
+    "        y_pred = rf.predict(X_val)\n",
+    "        mse = mean_squared_error(y_val, y_pred)\n",
+    "        rmse = np.sqrt(mse)\n",
+    "        print('%s -> %.3f' % (i, rmse))\n",
+    "        rmses.append(rmse)\n",
+    "\n",
+    "    print(\"mean\")\n",
+    "    print(np.mean(rmses))\n",
+    "\n",
+    "    all_rmses[depth] = rmses    \n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "880f5a34-2650-485e-a64f-8d2e755df231",
    "metadata": {},
    "outputs": [],
    "source": []
