--- a/homework-6/decisionTreeRegression.ipynb
+++ b/homework-6/decisionTreeRegression.ipynb
@@ -3444,29 +3444,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 165,
    "id": "cbee6502-f6f9-418c-8e9a-185641458c98",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'columns'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[161]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m importances = model.feature_importances_\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# You can then pair these importances with your feature names\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m feature_names = \u001b[43mX_train\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m \u001b[38;5;66;03m# If X is a pandas DataFrame\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Or create a list of feature names if X is a NumPy array\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# feature_names = [f\"feature_{i}\" for i in range(X.shape[1])]\u001b[39;00m\n\u001b[32m      7\u001b[39m \n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# Print or visualize the importances\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i, importance \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(importances):\n",
-      "\u001b[31mAttributeError\u001b[39m: 'numpy.ndarray' object has no attribute 'columns'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature acceleration: 0.0115\n",
+      "Feature drivetrain=All-wheel drive: 0.0004\n",
+      "Feature drivetrain=Front-wheel drive: 0.0003\n",
+      "Feature engine_displacement: 0.0033\n",
+      "Feature fuel_type=Diesel: 0.0004\n",
+      "Feature fuel_type=Gasoline: 0.0003\n",
+      "Feature horsepower: 0.0160\n",
+      "Feature model_year: 0.0032\n",
+      "Feature num_cylinders: 0.0023\n",
+      "Feature num_doors: 0.0016\n",
+      "Feature origin=Asia: 0.0005\n",
+      "Feature origin=Europe: 0.0005\n",
+      "Feature origin=USA: 0.0006\n",
+      "Feature vehicle_weight: 0.9592\n"
      ]
     }
    ],
    "source": [
     "importances = model.feature_importances_\n",
     "\n",
-    "# You can then pair these importances with your feature names\n",
-    "feature_names = X_train.columns # If X is a pandas DataFrame\n",
-    "# Or create a list of feature names if X is a NumPy array\n",
-    "# feature_names = [f\"feature_{i}\" for i in range(X.shape[1])]\n",
+    "feature_names = dv.get_feature_names_out()\n",
     "\n",
     "# Print or visualize the importances\n",
     "for i, importance in enumerate(importances):\n",
@@ -3474,9 +3480,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54205988-0813-4881-9f94-b5b632a2b163",
+   "metadata": {},
+   "source": [
+    "Q6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "825a81ed-1a9c-4df5-a8f1-dc59c437f8ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting xgboost\n",
+      "  Using cached xgboost-3.1.1-py3-none-macosx_12_0_arm64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: numpy in /opt/miniconda3/envs/ml-zoomcamp/lib/python3.11/site-packages (from xgboost) (2.0.1)\n",
+      "Requirement already satisfied: scipy in /opt/miniconda3/envs/ml-zoomcamp/lib/python3.11/site-packages (from xgboost) (1.16.1)\n",
+      "Using cached xgboost-3.1.1-py3-none-macosx_12_0_arm64.whl (2.2 MB)\n",
+      "Installing collected packages: xgboost\n",
+      "Successfully installed xgboost-3.1.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install xgboost\n",
+    "import xgboost as xgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "fc2895dc-29ff-4b90-98bb-26d43f17b8fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtrain = xgb.DMatrix(X_train, label=y_train, feature_names=dv.feature_names_)\n",
+    "dval = xgb.DMatrix(X_val, label=y_val, feature_names=dv.feature_names_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "7aa96ca5-73df-4f2f-b68a-74279a534802",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "watchlist = [(dtrain, 'train'), (dval, 'val')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "2d63a2f9-1d71-4a11-9aad-d8be522d47d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_params = {\n",
+    "    'eta': 0.3, \n",
+    "    'max_depth': 6,\n",
+    "    'min_child_weight': 1,\n",
+    "    \n",
+    "    'objective': 'reg:squarederror',\n",
+    "    'nthread': 8,\n",
+    "    \n",
+    "    'seed': 1,\n",
+    "    'verbosity': 1,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "b493f49f-8bc6-4a8b-844b-c7c34758d98a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture output\n",
+    "\n",
+    "model = xgb.train(xgb_params, dtrain,\n",
+    "                  num_boost_round=100,\n",
+    "                  evals=watchlist, verbose_eval=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "633107c2-f0b0-44f8-ad61-1fc799c97ab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_xgb_output(output):\n",
+    "    tree = []\n",
+    "    aucs_train = []\n",
+    "    aucs_val = []\n",
+    "\n",
+    "    for line in output.stdout.strip().split('\\n'):\n",
+    "        it_line, train_line, val_line = line.split('\\t')\n",
+    "\n",
+    "        it = int(it_line.strip('[]'))\n",
+    "        train = float(train_line.split(':')[1])\n",
+    "        val = float(val_line.split(':')[1])\n",
+    "\n",
+    "        tree.append(it)\n",
+    "        aucs_train.append(train)\n",
+    "        aucs_val.append(val)\n",
+    "\n",
+    "    return tree, aucs_train, aucs_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "83d3c0bb-46d7-4420-ba5e-93ed5a10d6c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.85444\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree, _, aucs_val_eta_03 = parse_xgb_output(output)\n",
+    "print(max(aucs_val_eta_03))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "ad22ca13-1c9b-4606-8ae8-ca16a8e32475",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_params = {\n",
+    "    'eta': 0.1, \n",
+    "    'max_depth': 6,\n",
+    "    'min_child_weight': 1,\n",
+    "    \n",
+    "    'objective': 'reg:squarederror',\n",
+    "    'nthread': 8,\n",
+    "    \n",
+    "    'seed': 1,\n",
+    "    'verbosity': 1,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "88ae9a42-3074-4aa2-a714-34c4eb54b1e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture output\n",
+    "\n",
+    "model = xgb.train(xgb_params, dtrain,\n",
+    "                  num_boost_round=100,\n",
+    "                  evals=watchlist, verbose_eval=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "2aa862de-764f-49a6-a787-358523b03f5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.34561\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree, _, aucs_val_eta_01 = parse_xgb_output(output)\n",
+    "print(max(aucs_val_eta_01))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1897ea91-1987-409c-b0a7-1f7fa8d2f83b",
+   "id": "6a80b605-ec12-4fd1-8380-1e55b6810303",
    "metadata": {},
    "outputs": [],
    "source": []
