--- a/homework-6/decisionTreeRegression.ipynb
+++ b/homework-6/decisionTreeRegression.ipynb
@@ -3489,7 +3489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 228,
    "id": "825a81ed-1a9c-4df5-a8f1-dc59c437f8ce",
    "metadata": {},
    "outputs": [
@@ -3497,13 +3497,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting xgboost\n",
-      "  Using cached xgboost-3.1.1-py3-none-macosx_12_0_arm64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: xgboost in /opt/miniconda3/envs/ml-zoomcamp/lib/python3.11/site-packages (3.1.1)\n",
       "Requirement already satisfied: numpy in /opt/miniconda3/envs/ml-zoomcamp/lib/python3.11/site-packages (from xgboost) (2.0.1)\n",
-      "Requirement already satisfied: scipy in /opt/miniconda3/envs/ml-zoomcamp/lib/python3.11/site-packages (from xgboost) (1.16.1)\n",
-      "Using cached xgboost-3.1.1-py3-none-macosx_12_0_arm64.whl (2.2 MB)\n",
-      "Installing collected packages: xgboost\n",
-      "Successfully installed xgboost-3.1.1\n"
+      "Requirement already satisfied: scipy in /opt/miniconda3/envs/ml-zoomcamp/lib/python3.11/site-packages (from xgboost) (1.16.1)\n"
      ]
     }
    ],
@@ -3514,7 +3510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 229,
    "id": "fc2895dc-29ff-4b90-98bb-26d43f17b8fe",
    "metadata": {},
    "outputs": [],
@@ -3525,7 +3521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 230,
    "id": "7aa96ca5-73df-4f2f-b68a-74279a534802",
    "metadata": {},
    "outputs": [],
@@ -3535,7 +3531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 231,
    "id": "2d63a2f9-1d71-4a11-9aad-d8be522d47d5",
    "metadata": {},
    "outputs": [],
@@ -3555,7 +3551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 232,
    "id": "b493f49f-8bc6-4a8b-844b-c7c34758d98a",
    "metadata": {},
    "outputs": [],
@@ -3569,15 +3565,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 233,
    "id": "633107c2-f0b0-44f8-ad61-1fc799c97ab4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse_xgb_output(output):\n",
     "    tree = []\n",
-    "    aucs_train = []\n",
-    "    aucs_val = []\n",
+    "    rmse_train = []\n",
+    "    rmse_val = []\n",
     "\n",
     "    for line in output.stdout.strip().split('\\n'):\n",
     "        it_line, train_line, val_line = line.split('\\t')\n",
@@ -3587,15 +3583,15 @@
     "        val = float(val_line.split(':')[1])\n",
     "\n",
     "        tree.append(it)\n",
-    "        aucs_train.append(train)\n",
-    "        aucs_val.append(val)\n",
+    "        rmse_train.append(train)\n",
+    "        rmse_val.append(val)\n",
     "\n",
-    "    return tree, aucs_train, aucs_val"
+    "    return tree, rmse_train, rmse_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 234,
    "id": "83d3c0bb-46d7-4420-ba5e-93ed5a10d6c6",
    "metadata": {},
    "outputs": [
@@ -3603,18 +3599,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.85444\n"
+      "0.43349\n"
      ]
     }
    ],
    "source": [
-    "tree, _, aucs_val_eta_03 = parse_xgb_output(output)\n",
-    "print(max(aucs_val_eta_03))"
+    "tree, _, rmse_val_eta_03 = parse_xgb_output(output)\n",
+    "print(min(rmse_val_eta_03))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 235,
    "id": "ad22ca13-1c9b-4606-8ae8-ca16a8e32475",
    "metadata": {},
    "outputs": [],
@@ -3634,7 +3630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 236,
    "id": "88ae9a42-3074-4aa2-a714-34c4eb54b1e9",
    "metadata": {},
    "outputs": [],
@@ -3648,7 +3644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 237,
    "id": "2aa862de-764f-49a6-a787-358523b03f5b",
    "metadata": {},
    "outputs": [
@@ -3656,19 +3652,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.34561\n"
+      "0.42426\n"
      ]
     }
    ],
    "source": [
-    "tree, _, aucs_val_eta_01 = parse_xgb_output(output)\n",
-    "print(max(aucs_val_eta_01))"
+    "tree, _, rmse_val_eta_01 = parse_xgb_output(output)\n",
+    "print(min(rmse_val_eta_01))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6a80b605-ec12-4fd1-8380-1e55b6810303",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92099567-300d-445c-b2f0-121a973937fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "063f3c1c-7dc7-41db-a9f2-b61ba1d4beb8",
    "metadata": {},
    "outputs": [],
    "source": []
