all other parts

--- a/midterm_project/midterm-project.ipynb
+++ b/midterm_project/midterm-project.ipynb
@@ -1931,16 +1931,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "3d843e14-59ff-4c42-bc6e-6a1347933ece",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!jupyter nbconvert --to script Midterm-project.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 158,
    "id": "13828ba8-aa56-4a58-92c0-d0ef7857a830",
    "metadata": {},
@@ -3084,133 +3074,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 823,
    "id": "4ce49d00-c755-4b46-8900-a426dd6d0d5b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest Hyperparameter Search\n",
-      "======================================================================\n",
-      "n_estimators: [50, 100, 200]\n",
-      "max_depth: [5, 10, 15, None]\n",
-      "min_samples_split: [2, 5, 10]\n",
-      "min_samples_leaf: [1, 2, 4]\n",
-      "max_features: ['sqrt', 'log2', None]\n",
-      "class_weight: [None, 'balanced']\n",
-      "Optimizing for: f1\n",
-      "Total combinations to test: 648\n",
-      "Note: This may take a while...\n",
-      "\n",
-      "  New best score: 0.8057 with params: {'n_estimators': 50, 'max_depth': 5, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'class_weight': None}\n",
-      "  New best score: 0.8078 with params: {'n_estimators': 50, 'max_depth': 5, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_features': 'sqrt', 'class_weight': None}\n",
-      "Progress: 10/648 combinations tested...\n",
-      "Progress: 20/648 combinations tested...\n",
-      "  New best score: 0.8174 with params: {'n_estimators': 50, 'max_depth': 10, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'class_weight': None}\n",
-      "  New best score: 0.8217 with params: {'n_estimators': 50, 'max_depth': 10, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'log2', 'class_weight': None}\n",
-      "Progress: 30/648 combinations tested...\n",
-      "  New best score: 0.8243 with params: {'n_estimators': 50, 'max_depth': 10, 'min_samples_split': 5, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'class_weight': None}\n",
-      "Progress: 40/648 combinations tested...\n",
-      "Progress: 50/648 combinations tested...\n",
-      "  New best score: 0.8287 with params: {'n_estimators': 50, 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'class_weight': None}\n",
-      "  New best score: 0.8301 with params: {'n_estimators': 50, 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'class_weight': None}\n",
-      "Progress: 60/648 combinations tested...\n",
-      "  New best score: 0.8321 with params: {'n_estimators': 50, 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_features': None, 'class_weight': None}\n",
-      "  New best score: 0.8323 with params: {'n_estimators': 50, 'max_depth': 15, 'min_samples_split': 5, 'min_samples_leaf': 1, 'max_features': None, 'class_weight': None}\n",
-      "Progress: 70/648 combinations tested...\n",
-      "Progress: 80/648 combinations tested...\n",
-      "  New best score: 0.8323 with params: {'n_estimators': 50, 'max_depth': 15, 'min_samples_split': 10, 'min_samples_leaf': 4, 'max_features': None, 'class_weight': None}\n",
-      "  New best score: 0.8340 with params: {'n_estimators': 50, 'max_depth': None, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'log2', 'class_weight': None}\n",
-      "  New best score: 0.8340 with params: {'n_estimators': 50, 'max_depth': None, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'class_weight': None}\n",
-      "  New best score: 0.8358 with params: {'n_estimators': 50, 'max_depth': None, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_features': None, 'class_weight': None}\n",
-      "Progress: 90/648 combinations tested...\n",
-      "Progress: 100/648 combinations tested...\n",
-      "Progress: 110/648 combinations tested...\n",
-      "Progress: 120/648 combinations tested...\n",
-      "Progress: 130/648 combinations tested...\n",
-      "Progress: 140/648 combinations tested...\n",
-      "Progress: 150/648 combinations tested...\n",
-      "Progress: 160/648 combinations tested...\n",
-      "Progress: 170/648 combinations tested...\n",
-      "Progress: 180/648 combinations tested...\n",
-      "Progress: 190/648 combinations tested...\n",
-      "  New best score: 0.8365 with params: {'n_estimators': 100, 'max_depth': None, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_features': None, 'class_weight': None}\n",
-      "Progress: 200/648 combinations tested...\n",
-      "Progress: 210/648 combinations tested...\n",
-      "Progress: 220/648 combinations tested...\n",
-      "Progress: 230/648 combinations tested...\n",
-      "Progress: 240/648 combinations tested...\n",
-      "Progress: 250/648 combinations tested...\n",
-      "Progress: 260/648 combinations tested...\n",
-      "Progress: 270/648 combinations tested...\n",
-      "Progress: 280/648 combinations tested...\n",
-      "Progress: 290/648 combinations tested...\n",
-      "Progress: 300/648 combinations tested...\n",
-      "Progress: 310/648 combinations tested...\n",
-      "Progress: 320/648 combinations tested...\n",
-      "Progress: 330/648 combinations tested...\n",
-      "Progress: 340/648 combinations tested...\n",
-      "Progress: 350/648 combinations tested...\n",
-      "Progress: 360/648 combinations tested...\n",
-      "Progress: 370/648 combinations tested...\n",
-      "Progress: 380/648 combinations tested...\n",
-      "Progress: 390/648 combinations tested...\n",
-      "Progress: 400/648 combinations tested...\n",
-      "Progress: 410/648 combinations tested...\n",
-      "Progress: 420/648 combinations tested...\n",
-      "Progress: 430/648 combinations tested...\n",
-      "Progress: 440/648 combinations tested...\n",
-      "Progress: 450/648 combinations tested...\n",
-      "Progress: 460/648 combinations tested...\n",
-      "Progress: 470/648 combinations tested...\n",
-      "Progress: 480/648 combinations tested...\n",
-      "Progress: 490/648 combinations tested...\n",
-      "Progress: 500/648 combinations tested...\n",
-      "Progress: 510/648 combinations tested...\n",
-      "  New best score: 0.8366 with params: {'n_estimators': 100, 'max_depth': None, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'class_weight': 'balanced'}\n",
-      "Progress: 520/648 combinations tested...\n",
-      "Progress: 530/648 combinations tested...\n",
-      "Progress: 540/648 combinations tested...\n",
-      "Progress: 550/648 combinations tested...\n",
-      "Progress: 560/648 combinations tested...\n",
-      "Progress: 570/648 combinations tested...\n",
-      "Progress: 580/648 combinations tested...\n",
-      "Progress: 590/648 combinations tested...\n",
-      "Progress: 600/648 combinations tested...\n",
-      "Progress: 610/648 combinations tested...\n",
-      "Progress: 620/648 combinations tested...\n",
-      "  New best score: 0.8374 with params: {'n_estimators': 200, 'max_depth': None, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'class_weight': 'balanced'}\n",
-      "Progress: 630/648 combinations tested...\n",
-      "Progress: 640/648 combinations tested...\n",
-      "\n",
-      "======================================================================\n",
-      "Best Parameters:\n",
-      "  n_estimators: 200\n",
-      "  max_depth: None\n",
-      "  min_samples_split: 2\n",
-      "  min_samples_leaf: 1\n",
-      "  max_features: sqrt\n",
-      "  class_weight: balanced\n",
-      "Best F1: 0.8374\n",
-      "Best threshold: 0.4150\n",
-      "======================================================================\n",
-      "\n",
-      "Final Model Performance:\n",
-      "F1 Score: 0.8374\n",
-      "ROC-AUC Score: 0.9748\n",
-      "\n",
-      "Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.95      0.96      0.96      7029\n",
-      "           1       0.86      0.81      0.84      1964\n",
-      "\n",
-      "    accuracy                           0.93      8993\n",
-      "   macro avg       0.91      0.89      0.90      8993\n",
-      "weighted avg       0.93      0.93      0.93      8993\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'train_random_forest_and_get_metrics' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[823]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m random_forest_model, random_forest_dv, random_forest_threshold = \u001b[43mtrain_random_forest_and_get_metrics\u001b[49m(df_train_full, y_train_full, df_test, y_test, all_features)\n",
+      "\u001b[31mNameError\u001b[39m: name 'train_random_forest_and_get_metrics' is not defined"
      ]
     }
    ],
@@ -3286,7 +3162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 821,
    "id": "9fd31bc3-fca1-4b8b-9c2d-6b6293e56b02",
    "metadata": {},
    "outputs": [],
@@ -3296,10 +3172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 822,
    "id": "70838db2-5ad9-4aa1-a15e-f92ee6dea791",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'random_forest_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[822]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mmidterm_model.bin\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mwb\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f_out:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     pickle.dump(\u001b[43mrandom_forest_model\u001b[49m, f_out)\n",
+      "\u001b[31mNameError\u001b[39m: name 'random_forest_model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "with open('midterm_model.bin', 'wb') as f_out:\n",
     "    pickle.dump((random_forest_model, random_forest_dv, random_forest_threshold), f_out)"
@@ -3307,8 +3195,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 824,
    "id": "9b879d74-4907-46ce-ac5c-204945a2dab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Midterm-project.ipynb to script\n",
+      "[NbConvertApp] Writing 27402 bytes to Midterm-project.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to script Midterm-project.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76fb3362-96c6-4548-b149-8c8cec5cfa25",
    "metadata": {},
    "outputs": [],
    "source": []
